# ats_resume_analyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  README.md  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml
config/: canonical_skills.txt  phrases.txt  stopwords.txt  synonyms.json
src/ats/: app.py  evidence.py  llm.py  nlp_backends.py  parse.py  pdf_utils.py  scoring.py
src/ats/prompts/: prompts.py
tests/: test_pdf_utils.py
